test/parser/tuple/single_element_trailing_comma_error.exp
Error: Unexpected token `,`, expected `)`
test/parser/tuple/single_element_trailing_comma_error.myte:3:10
 3 | val x = (1,);
   |           ^